--- a/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 5.lyx
+++ b/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 5.lyx
@@ -652,7 +652,7 @@ Soluciones
 
 \end_deeper
 \begin_layout Enumerate
-\begin_inset Formula $P\left(X>2\right)=1-P\left(X\leq2\right)=F\left(2\right)=\frac{2-1}{3}=\frac{1}{3}$
+\begin_inset Formula $P\left(X>2\right)=1-P\left(X\leq2\right)=1-F\left(2\right)=1-\frac{2-1}{3}=\frac{2}{3}$
 \end_inset
 
 .
@@ -3167,28 +3167,12 @@ f_{G}\left(g\right)=f_{X}\left(\frac{g-10}{2}\right)\left|\frac{d}{dg}\left(\fra
 \end_layout
 
 \begin_layout Itemize
-\begin_inset Formula $E\left(X^{2}\right)=\intop_{0}^{6}x^{2}\cdot\frac{x}{18}dx=\left.\frac{x^{4}}{72}\right|_{0}^{6}=18$
-\end_inset
-
-.
-\end_layout
-
-\begin_layout Itemize
-\begin_inset Formula $\text{\ensuremath{E\left(G\right)=E\left[\left(10+2X\right)^{2}\right]=E\left(4X^{2}+40X+100\right)=}}$
+\begin_inset Formula $\text{\ensuremath{E\left(G\right)=E\left(10+2X\right)=10+2E\left(X\right)=10+8=8}}$
 \end_inset
 
 
 \end_layout
 
-\begin_deeper
-\begin_layout Standard
-\begin_inset Formula $=4E\left(X^{2}\right)+40E\left(X\right)+100=4\cdot18+40\cdot4+100=332$
-\end_inset
-
-
-\end_layout
-
-\end_deeper
 \end_deeper
 \end_deeper
 \begin_layout Enumerate-Resume
